# dotfiles

./: .gitattributes  .gitignore  .gitmodules  Brewfile  README.adoc  README.md  bootstrap.sh  common.nix  crunch.nix  darwin-configuration.nix  eraserhead.net.tf  flake.nix  local-packages.nix  macbook.nix  secret.key  terraform.tfstate
1password/: default.nix
2u/: README.adoc
3d/: default.nix
alacritty/: default.nix  install.sh
alfred/: default.nix  license.txt
anki/: default.nix
aws/: boto.symlink  config  credentials  default.nix
bash/: bash_profile.symlink  default.nix
bitchx/: bitchxrc.symlink
broot/: default.nix
browser/: default.nix
chromium/: default.nix
clojure/: default.nix  deps.edn
clojure-lsp/: install.sh
coq/: default.nix
daily/: .gitignore  Cargo.toml  cabal.sandbox.config  daily.cabal  install.sh  stack.yaml
daily/main/: Main.hs
daily/src/: Daily.hs  Main.hs  main.rs
daily/src/Daily/: IO.hs
daily/test/: Tests.hs
docker/: default.nix
dogfood/: Spoons.nix  add-missing.nix  clojerbil.nix  default.nix  elvish.nix  fzf.kak.nix  gambit.nix  gerbil-bencode.nix  gerbil.nix  gewgaw.nix  git-browse-link.nix  gitout.nix  kak-ansi.nix  kak-jira.nix  kak-plumb.nix  kak-proof.nix  kakoune-pluggo.nix  kakoune.nix  kitty.nix  nats-editor-kak.nix  nats-plumber.nix  natscli.nix  openscad.kak.nix  parinfer-rust.nix  plumber-pluggo.nix  rep.nix  sqltools.nix  tableize.nix  taskwarrior-review.nix  tmux-copy-mode-kakoune.nix  tmux-ctrlw.nix  tmux-plumb.nix  tmux.nix  yabai.nix
elvish/: default.nix
emacs/: default.nix  emacs  emacs.symlink
fonts/: README.md  default.nix  install.sh
freecad/: default.nix
ghc/: install.sh
git/: default.nix  git-l  gitconfig  gitconfig.symlink  gitignore_global  install.sh  repos.txt
gnupg/: default.nix
go/: default.nix
gtypist/: default.nix  gtypist.typ
hammerspoon/: default.nix  init.lua
i3/: default.nix
iterm2/: com.googlecode.iterm2.plist  install.sh
jira/: default.nix
kak/: default.nix  kakrc  version.json
kakoune/: case.kak.nix  default.nix  elvish.kak.nix  kakrc  quickscope-kak.nix  quickscope.kak.nix
karabiner/: .gitignore  alacritty.sh  default.nix
kitty/: default.nix  window_position.py
lib/: default.nix
linux/: default.nix
linuxcnc/: default.nix  linuxcnc.nix
macos/: Pro.terminal  default.nix  install.sh
mail/: default.nix  ses-user.nix
(+487 files in other folders)
