name:                daily
version:             0.1.0.0
synopsis:            Simple CLI for daily tasks
homepage:            http://github.com/eraserhd/dotfiles
license:             GPL-2
author:              Jason Felice
maintainer:          jason.m.felice@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Daily,
                       Daily.IO
  build-depends:       aeson >= 1.1 && <1.2,
                       base >=4.9 && <4.10,
                       bytestring >= 0.10 && <0.11,
                       free >= 4.12 && <4.13,
                       http-conduit >= 2.2 && <2.3,
                       time >= 1.6 && <1.7,
                       typed-process >= 0.1 && <0.2
  default-language:    Haskell2010

executable daily
  hs-source-dirs:      main
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10,
                       daily
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  build-depends:       base >=4.9 && <4.10,
                       daily,
                       hspec >=2.4 && <2.5
  default-language:    Haskell2010
